--- a/project/part5/products/fusion.html
+++ b/project/part5/products/fusion.html
@@ -1,1 +1,514 @@
-fusion.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
+<link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenvillemiddle.css">  
+<link rel="stylesheet" href="./css/greenville.css">  
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+   .right-links { padding: var(--space-1); /* becomes 4px */ 
+				 margin-bottom: var(--space-2); /* becomes 16px */ 
+				gap: 4px;
+				}
+  /* Thumbnail slider */
+  .sales-slider {
+    position: relative;
+    width: 999px;
+    height: 133px;
+    margin: 10px auto;
+    overflow: hidden;
+  }
+
+  .slider-window {
+    width: 999px;
+    height: 133px;
+    overflow: hidden;
+  }
+
+  .slides {
+    display: flex;
+    transition: transform 0.4s ease;
+  }
+
+
+.slide {
+  min-width: 200px;      /* smaller, cleaner */
+  height: 120px;
+  cursor: pointer;
+  padding: 2px;
+  border-radius: 4px;
+  overflow: hidden;
+  opacity: 0.7;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;     /* keeps aspect ratio while filling */
+  border-radius: 4px;
+}
+
+.slide.active {
+  opacity: 1;
+  transform: scale(1.05);
+  outline: 2px solid #00e676;
+}
+
+H4{ color: darkgreen;}
+	
+  .prev, .next {
+    position: absolute;
+    top: 40%;
+    background: rgba(0,0,0,0.4);
+    color: white;
+    border: none;
+    padding: 6px 10px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
+  .prev { left: 0; }
+  .next { right: 0; }
+
+.product-card {
+    width: 300px;
+    min-height: 200px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+}
+.products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+.product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
+button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; margin: 0 auto; }
+	.emphasis {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.emphasis-inner {
+  background: #000;              /* black background */
+  color: #b8ff4f;                /* kelly‑green text */
+  padding: 40px 50px;
+  border-radius: 12px;
+  max-width: 600px;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+
+.emphasis-inner h3 {
+  margin-bottom: 8px;
+  font-size: 1.4rem;
+  color: #7CFC00;                /* brighter kelly green for headers */
+}
+
+.emphasis-inner p {
+  margin-bottom: 24px;
+  font-size: 1rem;
+  color: #d9ffd9;                /* softer green for readability */
+}
+
+.emphasis-inner p:last-child {
+  margin-bottom: 0;
+}
+
+#centercourt {
+  width: 1000px;
+  height: 300px;
+  display: block;
+  margin: 0 auto;        /* centers it */
+  border: 0;
+  background: #000;      /* optional: prevents white flash */
+}
+
+a
+{
+font-size: 10pt;
+}
+
+.feature-card: hover;
+{
+background-color: #00cc44;
+}
+</style>
+
+</head>
+<body>
+<div class="container2" style="border: solid 2px darkgreen;">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+			      <a href="index.html">Home</a>
+			      <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	          <a href="template.html">AdminPageTemplate</a>
+        </div>
+    </div>
+<div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
+
+  <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
+    <span class="material-icons" style="color:white;">home</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="userhelp.html" aria-label="Help" title="Help">
+    <span class="material-icons" style="color:white;">help_outline</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="usernotices.html" aria-label="Notifications" title="Notifications">
+    <span class="material-icons" style="color:white;">notifications</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="login.html" aria-label="Login" title="Login">
+    <span class="material-icons" style="color:white;">login</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="logout.html" aria-label="Logout" title="Logout">
+    <span class="material-icons" style="color:white;">logout</span>
+  </md-text-button>
+
+   <md-text-button class="icon-only" href="myprofile.html" aria-label="My Profile" title="My Profile">
+    <span class="material-icons" style="color:white;">person</span>
+  </md-text-button>
+
+   <md-text-button class="icon-only" href="mycart.html" aria-label="My Cart" title="My Cart">
+    <span class="material-icons" style="color:white;">shopping_cart</span>
+  </md-text-button>
+</div>
+    
+</div>
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
+
+<nav>
+    <ul class="menu">
+        <li><a href="licenses6.html">Products</a></li>
+
+        <li class="dropdown">
+            <a href="./deployments/deployments.html">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./deployments/deployments.html">Deployment Options</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="./licensing/licensing.html">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./licensing/licensing.html">Licensing Portal Pages</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="./pricing/wizard.html">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./pricing/wizard.html">All Licenses</a></li>
+                <li><a href="./pricing/wizard.html">Wizard</a></li>
+            </ul>
+        </li>
+
+        <li><a href="contacts.html">Contact Sales</a></li>
+    </ul>
+</nav>
+
+
+	<!-- THIRD FEATURES SECTION -->
+	<!-- GRID DATA SECTION -->
+    <div id="griddata" class="griddata">
+        <div align="center"><span align="center"><img src="./images/fusionopen25.png" width="150px" height="150px"></span><BR>
+			<BR><h4>FusionShell Open Current Releases</h4></div><BR>
+
+        <div class="griddata-table">
+            <!-- REST API results will be injected here -->
+            <div class="grid-row">
+                <span>FusionShell Open</span>
+                <span>Variant: ExtranetBuild</span>
+                <span>Updated: 12/2025</span>
+				<span>Version: Open25</span>
+				<span>Modules: Sales, Marketing, Shop</span>
+            </div>
+
+            <div class="grid-row">
+                <span>FusionShell Open</span>
+                <span>Variant: IntranetBuild</span>
+                <span>Updated: 12/2025</span>
+				<span>Version: Open25</span>
+				<span>Modules: Sales, Marketing, Shop</span>
+            </div>
+            <div class="grid-row">
+                <span>FusionShell Open Backoffice</span>
+                <span>Variant: ERPCore</span>
+				<span>Updated: 12/2021</span>
+				<span>Version: Open25</span>
+                <span>Modules: Accounting, HR, Forms, Mobile</span>
+            </div>
+        </div><BR><BR>
+		</div>
+		<div id="griddata" class="griddata">
+        <div align="center"><span align="center"><img src="./images/fusionpro25.png" width="150px" height="150px"></span><BR>
+			<BR><h4>FusionShellPro V5.01 Current Releases</h4></div><BR>
+
+        <div class="griddata-table">
+            <!-- REST API results will be injected here -->
+            <div class="grid-row">
+                <span>FusionShell ProfessionalV5</span>
+                <span>Variant: SalesOperations</span>
+                <span>Updated: 12/2021</span>
+				<span>Version: 5.01</span>
+				<span>Modules: Sales, Marketing, Shop, LunaAI, MobileWeb, Mobile, GEM, FusionCommerce, Pro(9).Security(</span>
+            </div>
+
+            <div class="grid-row">
+                <span>FusionShell Pro Backoffice</span>
+                <span>Variant: ERPCore on MSSQL Server</span>
+				<span>Updated: 12/2021</span>
+				<span>Version: V5.01</span>
+                <span>Modules: Microsoft Dynamics SL Extensions</span>
+            </div>
+			<div class="grid-row">
+                <span>FusionShell Pro Backoffice</span>
+                <span>Variant: ERPCore on MSSQL Server</span>
+				<span>Updated: 12/2021</span>
+				<span>Version: V5.01</span>
+                <span>Modules: NCR Backoffice for Aloha</span>
+            </div>
+			<div class="grid-row">
+                <span>FusionShell Pro Backoffice</span>
+                <span>Variant: ERPCore on Oracle Server</span>
+				<span>Updated: 12/2021</span>
+				<span>Version: V5.01</span>
+                <span>Modules: Oracle Netsuite and Micros Extensions</span>
+            </div>
+        </div>
+    </div>
+
+<BR><BR>
+  <!-- Slider below -->
+
+	
+<!-- FOURTH FEATURES SECTION -->
+<!-- =============================== -->
+<!-- PRODUCT MODULES (GRID FORMAT)  -->
+<!-- =============================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
+        <br><br>
+        <h4>Fusion Shell Professional Product Modules</h4>
+    </div>
+    <br>
+
+    <div class="griddata-table">
+
+        <div class="grid-row">
+            <span>FusionShell Professional Sales & Ops</span>
+            <span>Modules: Sales Ops, Product Dev, Social Media, Ecommerce, Cross‑Platform</span>
+            <span>Updated: 12/2025</span>
+        </div>
+
+        <div class="grid-row">
+            <span>FusionShell Proximity Data & Analytics</span>
+            <span>Modules: Reporting, Dashboards, Governance</span>
+            <span>Updated: 12/2025</span>
+        </div>
+
+        <div class="grid-row">
+            <span>FusionShell Greenville Enterprise Manager Security & Compliance</span>
+            <span>Modules: Threat Detection, Compliance, Audit Logging</span>
+            <span>Updated: 12/2025</span>
+        </div>
+
+        <div class="grid-row">
+            <span>FusionDeveloper Tools & Training</span>
+            <span>Modules: API Mgmt, DevOps, Integration</span>
+            <span>Updated: 12/2025</span>
+        </div>
+
+        <div class="grid-row">
+            <span>FusionBackOffice Tools</span>
+            <span>Modules: HR, Accounting, Training, Surveys, SSO</span>
+            <span>Updated: 12/2025</span>
+        </div>
+
+    </div>
+    <br><br>
+</div>
+
+
+<!-- =============================== -->
+<!-- DEPLOYMENT MODELS (GRID FORMAT) -->
+<!-- =============================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
+        <br><br>
+        <h4>Fusion Deployment Models</h4>
+    </div>
+    <br>
+
+    <div class="griddata-table">
+
+        <div class="grid-row">
+            <span>Software On‑Premise</span>
+            <span>Category: Deployment</span>
+            <span>@YourPlace</span>
+          </div>
+
+        <div class="grid-row">
+            <span>Software in ILEC PTT Colos</span>
+            <span>Category: Deployment</span>
+            <span>@ILEC.Managed</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Software in Public Cloud</span>
+            <span>Category: Deployment</span>
+            <span>@Public.Cloud</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Hybrid Software</span>
+            <span>Category: Deployment</span>
+            <span>@GLI.Managed</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Hybrid Grid Deployments (HA)</span>
+            <span>Category: Deployment</span>
+            <span>@CTS.Managed</span>
+        </div>
+
+    </div>
+    <br><br>
+</div>
+
+
+<!-- =========================================== -->
+<!-- LICENSING & PLATFORM HIGHLIGHTS (GRID FORMAT) -->
+<!-- =========================================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
+        <br><br>
+        <h4>All Greenville Licensing, Professional & Technical Delivery Information</h4>
+    </div>
+    <br>
+
+    <div class="griddata-table">
+
+        <div class="grid-row">
+            <span>Licensing Options</span>
+            <span>Category: Licensing</span>
+            <span><a href="./licensing/licensing.html">Click Now For Licensing Options!</a></span>
+        </div>
+
+        <div class="grid-row">
+            <span>Get Started & Pricing</span>
+            <span>Category: Activation</span>
+            <span><a href="./pricing/pricing.html">Click Now For Pricing!</a></span>
+        </div>
+
+        <div class="grid-row">
+            <span>Secure & Compliant</span>
+            <span>Category: Security</span>
+            <span><a href="https://console.greenvilleassociates.com">Click Now For GEM Security(9)!</a></span>
+        </div>
+
+        <div class="grid-row">
+            <span>Expert Support</span>
+            <span>Category: Support</span>
+            <span><a href="userhelp.html">Click Now For Support!</a></span>
+        </div>
+
+        <div class="grid-row">
+            <span>Instant Activation</span>
+            <span>Category: Deployment</span>
+            <span><a href="licenses6.html">Click Here to BuyNow!</a></span>
+        </div>
+
+    </div>
+    <br><br>
+</div>
+
+</section>
+<div class="bottom-sections">
+	
+<section class="middle-columns" style="background-color: lightgrey;">
+
+    <!-- CENTER COLUMN: MIAMI IMAGES -->
+    <div class="mid-col">
+        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
+        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    </div>
+    <!-- LEFT COLUMN: QUICK LINKS -->
+    <div class="mid-col">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+    <div class="mid-col">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
+            <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
+            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="mycart.html?uid=1">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>
+<section class="sales">
+<div class="cta" id="contact">
+    <h2>Talk to Sales</h2>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <a href="contacts.html">Contact Sales</a>
+</div>
+</section>
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
+</div>
+</div>
+<script type="module">
+  import { createTheme } from "https://cdn.jsdelivr.net/npm/@mui/material@latest/+esm";
+
+  const theme = createTheme({
+    spacing: 2
+  });
+</script>
+</body>
+</html>
